logs/Slang/generated/keywords/5.6.2--keyword_macromodule.sv.log
name: macromodule
description: The 'macromodule' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_macromodule.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_macromodule.sv:8:8: error: expected declarator
    bit macromodule;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_macromodule.sv:8:20: error: expected identifier
    bit macromodule;
                   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_macromodule.sv:9:10: error: expected 'endmodule'
endmodule
         ^
